// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Add > should render the Home component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <h3
          class="title"
        >
          Add New Device
        </h3>
        <form
          class="form-container"
        >
          <div>
            <label>
              Type:
            </label>
            <input
              type="text"
              value=""
            />
          </div>
          <div>
            <label>
              Brand:
            </label>
            <input
              type="text"
              value=""
            />
          </div>
          <div>
            <label>
              Owner:
            </label>
            <input
              type="text"
              value=""
            />
          </div>
          <div>
            <label>
              Accessories:
            </label>
            <input
              type="checkbox"
            />
          </div>
          <div>
            <label>
              Warranty:
            </label>
            <input
              type="checkbox"
            />
          </div>
          <div>
            <label>
              Date:
            </label>
            <input
              data-date=""
              data-date-format="DD MMMM YYYY"
              type="date"
            />
          </div>
          <div
            class="buttons"
          >
            <input
              type="button"
              value="Back"
            />
            <input
              type="button"
              value="Save"
            />
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <h3
        class="title"
      >
        Add New Device
      </h3>
      <form
        class="form-container"
      >
        <div>
          <label>
            Type:
          </label>
          <input
            type="text"
            value=""
          />
        </div>
        <div>
          <label>
            Brand:
          </label>
          <input
            type="text"
            value=""
          />
        </div>
        <div>
          <label>
            Owner:
          </label>
          <input
            type="text"
            value=""
          />
        </div>
        <div>
          <label>
            Accessories:
          </label>
          <input
            type="checkbox"
          />
        </div>
        <div>
          <label>
            Warranty:
          </label>
          <input
            type="checkbox"
          />
        </div>
        <div>
          <label>
            Date:
          </label>
          <input
            data-date=""
            data-date-format="DD MMMM YYYY"
            type="date"
          />
        </div>
        <div
          class="buttons"
        >
          <input
            type="button"
            value="Back"
          />
          <input
            type="button"
            value="Save"
          />
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AddDevice component > renders Adding correctly 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      Add New Device
    </h3>
    <form
      class="form-container"
    >
      <div>
        <label>
          Type:
        </label>
        <input
          type="text"
          value=""
        />
      </div>
      <div>
        <label>
          Brand:
        </label>
        <input
          type="text"
          value=""
        />
      </div>
      <div>
        <label>
          Owner:
        </label>
        <input
          type="text"
          value=""
        />
      </div>
      <div>
        <label>
          Accessories:
        </label>
        <input
          type="checkbox"
        />
      </div>
      <div>
        <label>
          Warranty:
        </label>
        <input
          type="checkbox"
        />
      </div>
      <div>
        <label>
          Date:
        </label>
        <input
          data-date=""
          data-date-format="DD MMMM YYYY"
          type="date"
        />
      </div>
      <div
        class="buttons"
      >
        <input
          type="button"
          value="Back"
        />
        <input
          type="button"
          value="Save"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`AddDevice component > renders correctly 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      Add New Device
    </h3>
    <form
      class="form-container"
    >
      <div>
        <label>
          Type:
        </label>
        <input
          type="text"
          value=""
        />
      </div>
      <div>
        <label>
          Brand:
        </label>
        <input
          type="text"
          value=""
        />
      </div>
      <div>
        <label>
          Owner:
        </label>
        <input
          type="text"
          value=""
        />
      </div>
      <div>
        <label>
          Accessories:
        </label>
        <input
          type="checkbox"
        />
      </div>
      <div>
        <label>
          Warranty:
        </label>
        <input
          type="checkbox"
        />
      </div>
      <div>
        <label>
          Date:
        </label>
        <input
          data-date=""
          data-date-format="DD MMMM YYYY"
          type="date"
        />
      </div>
      <div
        class="buttons"
      >
        <input
          type="button"
          value="Back"
        />
        <input
          type="button"
          value="Save"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;
